# matern_bumphunt

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
bumphunt/: __init__.py  config.py  data.py  lee.py  models.py  plotting.py  reporting.py  scan.py
tests/: test_config.py  test_data.py  test_lee.py  test_models.py  test_reporting.py  test_scan.py
